# cmake-rc

./: CMakeLists.txt  LICENSE  README.md
cmake/: rc.cmake  rc_gen.cmake
example/: CMakeLists.txt  test.cpp
